--- a/package.json
+++ b/package.json
@@ -40,5 +40,8 @@
 		"vite": "^4.4.2",
 		"vitest": "^0.32.2"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"svelisy": "^1.0.5"
+	}
 }
